# rust-postgres-binary-copy

./: .travis.yml  Cargo.toml  README.md
doc/v0.1.0/: search-index.js
doc/v0.1.0/implementors/postgres_binary_copy/: trait.StreamingIterator.js
doc/v0.1.0/postgres_binary_copy/: index.html  sidebar-items.js  struct.BinaryCopyReader.html  trait.StreamingIterator.html
doc/v0.1.0/src/postgres_binary_copy/: lib.rs.html
doc/v0.1.1/: search-index.js
doc/v0.1.1/postgres_binary_copy/: index.html  struct.BinaryCopyReader.html  trait.StreamingIterator.html
doc/v0.1.1/src/postgres_binary_copy/: lib.rs.html
doc/v0.1.2/: search-index.js
doc/v0.1.2/postgres_binary_copy/: index.html  struct.BinaryCopyReader.html  struct.BinaryCopyWriter.html  struct.WriteValueReader.html  trait.StreamingIterator.html  trait.WriteValue.html
doc/v0.2.0/postgres_binary_copy/: index.html  sidebar-items.js  struct.BinaryCopyReader.html  struct.BinaryCopyWriter.html  struct.WriteValueReader.html  trait.StreamingIterator.html  trait.WriteValue.html
doc/v0.2.1/: search-index.js
doc/v0.2.1/postgres_binary_copy/: index.html  struct.BinaryCopyReader.html  struct.BinaryCopyWriter.html  struct.WriteValueReader.html  trait.StreamingIterator.html  trait.WriteValue.html
doc/v0.3.0/postgres_binary_copy/: index.html  sidebar-items.js  struct.BinaryCopyReader.html  struct.BinaryCopyWriter.html  trait.StreamingIterator.html  trait.WriteValue.html
doc/v0.3.1/: search-index.js
doc/v0.3.1/postgres_binary_copy/: index.html  struct.BinaryCopyReader.html  struct.BinaryCopyWriter.html  trait.StreamingIterator.html  trait.WriteValue.html
src/: lib.rs
(+22 files in other folders)
