[package]
name = "postgres-binary-copy"
version = "0.5.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Support for binary-format COPY query execution with postgres"
documentation = "https://docs.rs/postgres-binary-copy/0.5.0/postgres_binary_copy"
repository = "https://github.com/sfackler/rust-postgres-binary-copy"
readme = "README.md"
keywords = ["database", "sql", "postgres", "copy"]

[dependencies]
byteorder = "1.0"
postgres = "0.15"
streaming-iterator = "0.1.1"
